Single-threaded job pool, async result calc.
Still pretty rough!

--- a/templates/setup.hbs
+++ b/templates/setup.hbs
@@ -1,3 +1,4 @@
+{{#*inline "page"}}
 <h1>{{ state_name }} Senate Election (2016)</h1>
 
 <form method="post">
@@ -7,3 +8,5 @@
   </div>
   <button>Run Election</button>
 </form>
+{{/inline}}
+{{~> base}}
