--- a/templates/result.hbs
+++ b/templates/result.hbs
@@ -1,1 +1,5 @@
-<h1>Aaaaaand the winner is... {{ winner }}</h1>
+<ol>
+{{#each elected}}
+  <li>{{this.0.other_names}} {{this.0.surname}} ({{this.0.party}})</li>
+{{/each}}
+</ol>
