Text box for entering disqualified candidates.

--- a/templates/setup.hbs
+++ b/templates/setup.hbs
@@ -1,10 +1,9 @@
 {{#*inline "page"}}
-<h1>{{ state_name }} Senate Election (2016)</h1>
-
+<h1>{{title}}</h1>
 <form method="post">
   <div>
-    <label for="num_senators">Number of senators to elect</label>
-    <input name="num_senators">
+    <label for="disqualified">Disqualified Senators</label><br>
+    <textarea name="disqualified"></textarea>
   </div>
   <button>Run Election</button>
 </form>
