--- a/templates/base.hbs
+++ b/templates/base.hbs
@@ -1,7 +1,12 @@
 <!doctype html>
 <html>
 <head>
-  <title>Hey this is a base page!</title>
+  <title>{{title}}</title>
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/purecss@1.0.0/build/pure-min.css"
+    integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w"
+    crossorigin="anonymous">
   <script
 	  src="https://code.jquery.com/jquery-3.2.1.min.js"
     integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
