--- a/templates/base.hbs
+++ b/templates/base.hbs
@@ -7,6 +7,7 @@
     href="https://unpkg.com/purecss@1.0.0/build/pure-min.css"
     integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w"
     crossorigin="anonymous">
+  <link rel="stylesheet" href="static/style.css">
   <script
 	  src="https://code.jquery.com/jquery-3.2.1.min.js"
     integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
