--- a/templates/setup.hbs
+++ b/templates/setup.hbs
@@ -1,6 +1,11 @@
 {{#*inline "page"}}
 <h1 id="title">{{title}}</h1>
 <div id="content">
+<p>In the box below you can enter the names of candidates to exclude from the
+calculation. Please enter the first and last name of each candidate, with one candidate
+per line (press enter for a new line). If you get an error, please check your spelling and
+formatting.
+</p>
 <div id="setup_form">
 <form method="post" class="pure-form pure-form-stacked">
   <div class="pure-control-group">
